--- a/Template/cart.html
+++ b/Template/cart.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block class %}class="sub_page"{% endblock class %}
-{% block menu_status %}active{% endblock menu_status %}
+{% block cart_status %}active{% endblock cart_status %}
 {% load static %}
 
 {% block main %}
