--- a/Template/home.html
+++ b/Template/home.html
@@ -17,9 +17,7 @@
               <div class="detail-box">
                 <h1>CozyBrew Cafe</h1>
                 <p>
-                  Doloremque, itaque aperiam facilis rerum, commodi, temporibus sapiente ad mollitia laborum quam
-                  quisquam esse error unde.
-                </p>
+                  Enjoy handcrafted coffee and quick snacks with cozy vibes.</p>
                 <div class="btn-box">
                   <a href="{% url 'Menu' %}" class="btn1">Order Now</a>
                 </div>
@@ -35,8 +33,8 @@
           <div class="row">
             <div class="col-md-7 col-lg-6">
               <div class="detail-box">
-                <h1>CozyBrew Cafe</h1>
-                <p>Enjoy handcrafted coffee and quick snacks with cozy vibes.</p>
+                <h1>Freshly Baked Moments</h1>
+                <p>From soft breads to crispy bites, every snack is made with care to give you that warm, homemade feeling.</p>
                 <div class="btn-box">
                   <a href="{% url 'Menu' %}" class="btn1">Order Now</a>
                 </div>
@@ -52,8 +50,8 @@
           <div class="row">
             <div class="col-md-7 col-lg-6">
               <div class="detail-box">
-                <h1>More Delicious Choices</h1>
-                <p>Tempora ex doloremque, labore, sunt repellat dolore, iste magni quos nihil ducimus libero ipsam.</p>
+                <h1>Sip, Smile, Repeat</h1>
+                <p>Whether it's a hot brew or a cool drink, every cup is crafted to make your day better — one sip at a time.</p>
                 <div class="btn-box">
                   <a href=href="{% url 'Menu' %}" class="btn1">Order Now</a>
                 </div>
@@ -234,18 +232,13 @@
     </div>
   </div>
 </section>
-
 <!-- end offer section -->
-
 <!-- food section -->
 {% load static %}
-
 <section class="video_ads_section layout_padding">
   <div class="container">
     <div class="heading_container heading_center">
-      <h2>BUY NOW!</h2>
     </div>
-
     <div class="video-wrapper" style="text-align: center;">
       <video 
         src="{% static 'videos/adsvid1.mp4' %}" 
@@ -253,7 +246,7 @@
         loop 
         muted 
         playsinline 
-        style="width: 100%; max-width: 800px; border-radius: 12px;">
+        style="width: 100%; height: 700px; max-width: 1300px; border-radius: 12px; ">
       </video>
     </div>
   </div>
