--- a/Template/about.html
+++ b/Template/about.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="{% static 'images/about-i.png' %} " alt="">
+            <img src="{% static 'images/aboutbg.png' %} " alt="">
           </div>
         </div>
         <div class="col-md-6">
